fixed spacing

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -70,7 +70,7 @@ header nav ul li a:hover {
 .read > div {
   display: flex;
   flex-wrap: wrap;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 aside.plant-product {
